# openmetadata-demo

./: .gitignore  .gitmodules  DEVELOPERS.md  README.md  example_apis.py
custom-connector/: README.md  custom.yaml  custom_proto.yaml  person_info.proto  sample.csv  setup.py
custom-graphql/: README.md  setup.py  user_updater.yaml
custom-om-test/: README.md  setup.py
custom-oracle-airflow/: .env  Dockerfile.airflow  Dockerfile.oracle  README.md  docker-compose.yml
dynamic_csv_importer/: README.md  csv_importer.py  requirements.txt  sample_dbt_jaffle.csv
grafana/: README.md  docker-compose.yaml
hive-lineage/: Makefile  README.md  lineage.yaml  query_log.csv
ingestion-automation/: deploy_database_ingestion.py
ingestion-github-actions/: README.md  snowflake_ingestion.py
ingestion-poetry/: README.md
ingestion-poetry/poetry-demo/: pyproject.toml
java-sdk-examples/: README.md  pom.xml
keycloak-sso/: .env-keycloak  README.md  docker-compose.yml
mcp/: README.md
mlmodel-cicd/: Makefile  README.md  ml_model.yaml  mlmodel_cicd.py  postgres.yaml  requirements.txt
postgres/: Makefile  README.md
postgres-foreign/: README.md
redpanda/: README.md  docker-compose.yml  redpanda.py  redpanda.yaml  script.sh
rename-service/: Makefile  README.md  config.yaml  setup.py
sdk-2.0-examples/: README.md
sdk-examples/: .coveragerc  .env.example  .pre-commit-config.yaml  Makefile  README.md  __init__.py  advanced.py  entities.py  lineage.py  metadata_ops.py  pyproject.toml  pytest.ini  queries.py  requirements-test.txt  services.py  setup.py
(+87 files in other folders)
